--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -119,7 +119,7 @@
                 min-height: 300px
 
     .banner
-        background-position: 30% 120px
+        background-position: 30% 0px
         background-size: auto 97%
         background-repeat: no-repeat 
         &__body
@@ -147,6 +147,8 @@
         text-align: left
 
     .materials
+        .projects__open
+            display: none
         &__download
             display: block
         &__table, &__niples
@@ -159,6 +161,17 @@
             width: 200%
             bottom: auto
             top: 0
+
+    .header
+        position: fixed
+        background-color: #fff
+        padding: 10px 0px
+
+    .logo
+        &__text
+            margin-top: 5px
+            font-size: 12px
+            margin-left: 0
 
     .quiz
         &__img
@@ -275,9 +288,6 @@
         display: flex
         flex-direction: column
         align-items: flex-start
-        &__text
-            margin-left: 0
-            margin-top: 15px
 
 @media screen and ( max-width: 850px )
     .projects
@@ -330,6 +340,9 @@
         margin-right: 10px
         &__img
             max-width: 150px
+
+    .menu
+        width: 50vw
 
     .why
         &__item
@@ -415,6 +428,11 @@
         &__title
             text-align: left
 
+    .projects
+        &__container
+            grid-template-columns: 1fr
+            justify-items: center
+
     .project
         &__img
             height: auto
@@ -436,6 +454,14 @@
             padding: 20px
 
     .header
+        &__burger
+            display: inline-block
+        &__contacts
+            flex-direction: column
+            align-items: flex-end
+        &__socials
+            margin-right: 0
+            margin-top: 10px
         .header
             padding: 10px 0px
             &__tel
@@ -455,8 +481,8 @@
         &__text
             font-size: 12px
 
-    &__leaf
-            display: none
+    .menu
+        width: 70vw
 
     .house
         &__title
