--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5
         font-size: 20px
         margin-top: 20px
         text-transform: uppercase
-        padding: 30px 50px
+        padding: 25px 45px
         border-radius: 50px
     &_projects
         padding: 15px 20px
@@ -180,7 +180,47 @@ h1, h2, h3, h4, h5
     position: absolute
     left: 0
     top: 0
-    z-index: 3
+    z-index: 10
+    &__burger
+        display: none
+        background-color: transparent
+        height: 35px
+        width: 35px
+        position: relative
+        &:focus
+            outline: none
+        &.active
+            span
+                opacity: 0
+            &::before
+                transform: translate(-50%, -50%) rotate(45deg)
+                top: 50%
+            &::after
+                transform: translate(-50%, -50%) rotate(-45deg)
+                top: 50%
+        &::before, &::after
+            content: ''
+            display: inline-block
+            width: 26px
+            height: 2px
+            position: absolute
+            background-color: #333
+            transform-origin: center
+            left: 50%
+            transform: translate(-50%, -50%)
+        &::before
+            top: 10px
+        &::after
+            bottom: 6px
+        span
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            display: inline-block
+            width: 26px
+            height: 2px
+            background-color: #333
     &__wrap
         display: flex
         align-items: center
@@ -231,6 +271,26 @@ h1, h2, h3, h4, h5
         &_tg
             background-color: #41B4E6
             z-index: 1
+
+.menu
+    position: fixed
+    height: 100vh
+    width: 40vw
+    background-color: #fff
+    z-index: 4
+    right: 0
+    top: 0
+    transform: translateX(100%)
+    padding: 120px 20px 0px
+    &__item
+        list-style-type: none
+    &__link
+        padding: 7px
+        display: inline-block
+        font-size: 16px
+        font-weight: 600
+    &.active
+        transform: translateX(0%)
 
 .logo
     &__img
@@ -490,6 +550,7 @@ h1, h2, h3, h4, h5
         &_hidden:not(.active)
             overflow: hidden
             height: 0px
+            margin: 0
         .swiper-wrapper
             max-width: 800px
         .swiper-slide
@@ -689,6 +750,7 @@ h1, h2, h3, h4, h5
                 text-transform: uppercase
                 text-align: center
                 font-size: 24px
+                line-height: 32px
                 font-weight: 700
                 color: #fff
                 margin-top: 25px
@@ -1468,6 +1530,7 @@ h1, h2, h3, h4, h5
         grid-column-gap: 40px
         grid-row-gap: 50px
         margin-top: 90px
+        align-items: end
         grid-template-columns: repeat(2, 1fr)
         &_hidden
             display: none
@@ -1557,8 +1620,8 @@ h1, h2, h3, h4, h5
         margin: 20px
         position: relative
         &:last-child
-            margin-right: auto
-            margin-left: 100px
+            opacity: 0
+            visibility: hidden
         &:not(:nth-child(3n))::after
             position: absolute
             height: 40px
@@ -1671,6 +1734,7 @@ h1, h2, h3, h4, h5
         height: 165px
         width: 165px
         position: relative
+        margin-top: 15px
         svg
             width: 100%
             max-width: 70px
@@ -1678,6 +1742,66 @@ h1, h2, h3, h4, h5
             top: 50%
             left: 50%
             transform: translate(-50%, -50%)
+
+.popup
+    background-color: #fff
+    padding: 40px 30px
+    position: relative
+    textarea.count__input
+        border-radius: 4px
+        padding: 15px
+    &__close
+        right: 10px
+        top: 10px
+        display: inline-block
+        position: absolute
+        height: 25px
+        width: 25px
+        cursor: pointer
+        &::before, &::after
+            content: ''
+            display: inline-block
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            height: 1px
+            width: 18px
+            background-color: #333333
+        &::before
+            transform: translate(-50%, -50%) rotate(-45deg)
+        &::after
+            transform: translate(-50%, -50%) rotate(45deg)
+    &__title
+        font-weight: bold
+        font-size: 18px
+        text-align: center
+        margin-top: 20px
+        display: inline-block
+    .count__input
+        padding: 20px 15px
+    .count__form
+        max-width: 350px
+        width: 100%
+        margin: 40px auto 10px
+    .button
+        padding: 18px 40px
+    &__wrapper
+        display: flex
+        align-items: center
+        justify-content: center
+        padding: 0px 10px
+        position: fixed
+        top: 0
+        left: 0
+        height: 100%
+        width: 100%
+        overflow-y: auto
+        background-color: rgba(0, 0, 0, .7)
+        z-index: 10
+        &:not(.active)
+            opacity: 0
+            visibility: hidden
 
 .footer
     padding-bottom: 65px
