--- a/hearth/sass/style.sass
+++ b/hearth/sass/style.sass
@@ -104,6 +104,8 @@ button.button, span.button, a.button
     background-color: transparent
     &:focus
         outline: none
+    &:hover
+        opacity: .8
     &_recall
         color: #000
         background-color: $text_yellow
@@ -113,8 +115,6 @@ button.button, span.button, a.button
         font-size: 12px
         font-weight: bold
         line-height: 24px
-        &:hover
-            box-shadow: 0 0 3px 1px $text_yellow
     &_item
         font-size: 14px
         text-transform: uppercase
@@ -125,8 +125,6 @@ button.button, span.button, a.button
         font-weight: 600
         margin-top: -5px
         margin-left: 25px
-        &:hover
-            box-shadow: 0 0 3px 1px #c36f21
         &::after
             content: ''
             display: inline-block
@@ -148,8 +146,6 @@ button.button, span.button, a.button
         font-weight: bold
         font-size: 14px
         margin-top: 20px
-        &:hover
-            box-shadow: 0 0 3px 1px $text_yellow
     &_colored
         &:hover
             color: #000
@@ -177,8 +173,6 @@ button.button, span.button, a.button
             margin-left: 8px
             background-image: url(../img/icons/cart_tovar.svg)
             margin-top: -5px
-        &:hover
-            box-shadow: 0 0 3px 1px $text_yellow
     &_contacts
         color: #000
         text-transform: uppercase
@@ -188,8 +182,6 @@ button.button, span.button, a.button
         background-color: $text_yellow
         border-radius: 40px
         padding: 15px 20px
-        &:hover
-            box-shadow: 0 0 3px 1px $text_yellow
     &_all
         color: #000
         background-color: #fff
@@ -200,8 +192,6 @@ button.button, span.button, a.button
         font-weight: 600
         line-height: 22px
         text-transform: uppercase
-        &:hover
-            box-shadow: 0 0 3px 1px $text_yellow
     &_cart
         background-color: #000000
         color: #fff
@@ -210,8 +200,6 @@ button.button, span.button, a.button
         text-align: center
         padding: 10px 30px
         border-radius: 30px
-        &:hover
-            box-shadow: 0 0 3px 1px #000
     &_order
         background-color: $text_yellow
         font-size: 14px
@@ -221,8 +209,6 @@ button.button, span.button, a.button
         border-radius: 30px
         margin-top: 10px
         transition: all .3s ease-out 0s
-        &:hover
-            box-shadow: 0 0 3px 1px $text_yellow
 
 span.button
     &_recall
@@ -240,6 +226,8 @@ span.button
     width: 100%
     z-index: 1000
     transition: opacity 0s ease-out 0s
+    a.header__logo:hover
+        transform: scale(1.03)
     & + *
         margin-top: 117px
     &.active
@@ -899,7 +887,7 @@ span.button
             & *
                 object-fit: cover
     &__content
-        padding: 30px 0px 90px
+        padding: 50px 0px 70px
         position: relative
     &__logo
         position: absolute
@@ -924,7 +912,6 @@ span.button
         font-weight: 600
         max-width: 340px
         line-height: 48px
-        letter-spacing: 2px
     .header
         &__dropdown
             display: flex
@@ -1044,6 +1031,8 @@ span.button
         position: absolute
         right: 0
         bottom: 0
+        width: 120%
+        height: 200%
         transform: translate(40%, 28%)
         z-index: 0
     &__content
@@ -1380,8 +1369,9 @@ span.button
     align-items: center
     max-width: 280px
     &__img
-        max-height: 60px
-        width: auto
+        height: 60px
+        width: 60px 
+        object-fit: contain
     &__title
         font-size: 20px
         font-weight: bold
