Close 2 the end

--- a/hearth/sass/style.sass
+++ b/hearth/sass/style.sass
@@ -759,6 +759,8 @@ span.button
         top: 50%
         transform: translate(-50%, -50%) rotate(90deg)
         fill: #383838
+    &:focus
+        outline: none
     &:hover
         svg
             fill: #BF8200
