--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -65,11 +65,17 @@ h1, h2, h3, h4, h5
         font-size: 21px
         padding: 28px 45px
         border-radius: 40px
+        &:hover
+            box-shadow: none
+            transform: translateY(4px)
     &_portfolio
         text-transform: uppercase
         font-size: 16px
         padding: 20px
         border-radius: 40px
+        &:hover
+            box-shadow: none
+            transform: translateY(4px)
     &_count
         text-transform: uppercase
         white-space: normal
@@ -77,6 +83,9 @@ h1, h2, h3, h4, h5
         font-size: 16px
         border-radius: 50px
         margin-top: 10px
+        &:hover
+            box-shadow: none
+            transform: translateY(4px)
     &_next
         text-transform: uppercase
         padding: 25px 40px
@@ -86,6 +95,9 @@ h1, h2, h3, h4, h5
         margin-top: auto
         opacity: 0
         pointer-events: none
+        &:hover
+            box-shadow: none
+            transform: translateY(4px)
         img
             max-width: 20px
             margin-left: 15px
@@ -100,6 +112,9 @@ h1, h2, h3, h4, h5
         text-transform: uppercase
         padding: 25px 45px
         border-radius: 50px
+        &:hover
+            box-shadow: none
+            transform: translateY(4px)
     &_projects
         padding: 15px 20px
         border-radius: 3px
@@ -123,6 +138,9 @@ h1, h2, h3, h4, h5
         text-transform: uppercase
         font-size: 20px
         border-radius: 50px
+        &:hover
+            box-shadow: none
+            transform: translateY(4px)
     &_step
         border-radius: 30px
         font-size: 14px
