--- a/dacha-project/sass/fonts.sass
+++ b/dacha-project/sass/fonts.sass
@@ -3,3 +3,21 @@
     src: url("../fonts/Oswald-Regular.ttf") format('truetype')
     font-style: normal
     font-weight: 400
+
+@font-face
+    font-family: "Museo Sans"
+    src: url("../fonts/MuseoSansCyrl-300.ttf") format('truetype')
+    font-style: normal
+    font-weight: 300
+
+@font-face
+    font-family: "Museo Sans"
+    src: url("../fonts/MuseoSansCyrl-700.ttf") format('truetype')
+    font-style: normal
+    font-weight: 700
+
+@font-face
+    font-family: "Museo Sans"
+    src: url("../fonts/MuseoSansCyrl-900.ttf") format('truetype')
+    font-style: normal
+    font-weight: bold
