--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -21,6 +21,7 @@
             &_1
                 display: none
             &_2
+                top: 100px
                 display: block
         &__container
             margin-top: 360px
@@ -44,6 +45,10 @@
             &_1, &_2
                 display: none
 
+    .about
+        &__saw, &__glass
+            display: none
+
     .benefits
         &__container
             flex-direction: column
@@ -55,12 +60,31 @@
             transform: none
 
     .why
+        &__item:nth-child(3n)
+            padding-left: 0
+        &__container
+            grid-template-columns: repeat(2, 1fr)
+            justify-items: center
         &__tree
             display: none
 
 @media screen and ( max-width: 1050px )
     .correct
         padding-bottom: 50px
+
+    .advantages
+        &__container
+            justify-content: center
+
+    .advantage
+        &:nth-child(2n)
+            margin-left: 0
+
+    .reports
+        .section__title 
+            text-align: left !important
+        &__body
+            padding-left: 0
 
     .notype
         &__bg
@@ -107,6 +131,16 @@
             max-width: 275px
 
 @media screen and ( max-width: 940px )
+    .section
+        &__title
+            &, & *
+                font-size: 30px
+                line-height: 42px
+            &.no-adaptiv, &.no-adaptiv *
+                text-align: center
+                font-size: 36px
+                line-height: 40px
+
     .examples
         &__container
             grid-template-columns: repeat(3, 1fr)
@@ -119,11 +153,14 @@
                 min-height: 300px
 
     .banner
-        background-position: 30% 0px
-        background-size: auto 97%
+        background-position: 30% -10px
+        background-size: auto 110%
         background-repeat: no-repeat 
+        margin-bottom: 20px
+        &__info
+            margin: 40px 0px
         &__body
-            padding: 200px 0px
+            padding: 130px 0px 160px
 
     .about
         margin-top: 40px
@@ -183,9 +220,6 @@
             
         &__container
             min-height: 800px
-    .banner
-        &__info
-            margin: 40px 0px
 
     .advantages
         .section__title
@@ -276,6 +310,9 @@
             align-items: center
         &__subtext
             margin-top: 20px
+            display: inline-block
+            text-align: center
+            width: 100%
             margin-left: 0
 
     .gift
@@ -296,6 +333,10 @@
             justify-items: center
     .project
         max-width: 400px
+
+    .count
+        &__title
+            line-height: 35px
 
     .quiz
         &__inputs
@@ -336,6 +377,27 @@
                 display: none
 
 @media screen and ( max-width: 640px )
+
+    .correct
+        .section__title
+            text-align: left
+
+    .section
+        &__title
+            &, & *
+                font-size: 24px
+                line-height: 30px
+
+    .banner
+        margin-bottom: 60px
+        background-position: 20% 180px
+        background-size: auto 90%
+        .section
+            &__title
+                &, & *
+                    font-size: 24px
+                    line-height: 30px
+
     .logo
         margin-right: 10px
         &__img
@@ -345,17 +407,20 @@
         width: 50vw
 
     .why
+        &__container
+            grid-template-columns: repeat(1, 1fr)
+            justify-items: center
         &__item
             margin: 20px 0px
-        &__container
-            flex-direction: column
-            align-items: center
 
     .examples
         &__container
             grid-template-columns: repeat(2, 1fr)
     
     .about
+        &__garantee
+            &-title
+                line-height: 35px
         &__oleg
             left: 50%
             width: 100%
@@ -370,6 +435,8 @@
             padding: 30px
 
     .error
+        .section__title, .section__title *
+            line-height: 35px
         &__container
             margin-bottom: 20px
             .swiper-wrapper
@@ -387,6 +454,9 @@
                 margin-bottom: 20px
 
     .house
+        &__item
+            font-size: 16px
+            line-height: 24px
         &__card
             border: none
             max-height: none
@@ -429,6 +499,8 @@
             text-align: left
 
     .projects
+        .section__title
+            text-align: left
         &__container
             grid-template-columns: 1fr
             justify-items: center
@@ -467,7 +539,20 @@
             &__tel
                 display: none
 
+    .how
+        padding-bottom: 40px
+        &__item
+            &:last-child
+                display: none
+
+    .notype
+        padding: 100px 0px 80px
+        .section__title 
+            text-align: left
+
     .quiz
+        .section__title
+            text-align: left
         &__subtext, &__options
             margin-top: 15px
         &__leaf
@@ -477,12 +562,19 @@
 
 
 @media screen and ( max-width: 400px )
+    .container
+        padding: 0px 10px
+
     .example
         &__text
             font-size: 12px
 
     .menu
         width: 70vw
+
+    .advantages
+        .section__title, .section__title *
+            font-size: 34px
 
     .house
         &__title
@@ -513,6 +605,9 @@
         &__body
             padding: 10px
         &__garantee
+            &-title
+                line-height: 28px
+                font-size: 22px
             &-img
                 max-width: 125px
             &-subtitle
@@ -522,8 +617,8 @@
 
     .button
         &_notype
-            font-size: 14px
-            padding: 20px 15px
+            font-size: 16px
+            padding: 20px 25px
 
     .portfolio
         &__container
