--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -754,6 +754,7 @@ html
 .services
     padding-bottom: 80px
     .uk-card
+        overflow-y: auto
         background-color: #F6F9FB
         box-shadow: none
         transition: all .2s ease-out 0s
