--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -21,6 +21,8 @@ $maxWidth: 1920
     transition: all .2s ease-in-out 0s
     color: $text_black
     font-family: 'Museo Sans', sans-serif
+    &:focus
+        outline: none
 
 body, html
     overflow-x: hidden
@@ -704,6 +706,8 @@ h1, h2, h3, h4, h5
             text-align: center
             font-size: 20px
             line-height: 30px
+            font-weight: 700
+            text-transform: uppercase
         &::before
             content: ''
             display: block
@@ -953,7 +957,7 @@ h1, h2, h3, h4, h5
     &__item
         background-color: #fff
         border-radius: 4px
-        padding: 45px 40px 25px 50px
+        padding: 45px 40px 45px 50px
         box-shadow: 0 0 20px 10px rgba(0, 0, 0, .05)
         max-width: 50%
         margin-right: 15px
@@ -1055,6 +1059,7 @@ h1, h2, h3, h4, h5
         &-text
             font-size: 20px
             max-width: 740px
+            line-height: 30px
             margin-top: 30px
             text-align: center
             display: inline-block
@@ -1117,7 +1122,7 @@ h1, h2, h3, h4, h5
             margin-top: 1.9em
 
 .benefits
-    margin-top: 60px
+    margin-top: 130px
     padding-bottom: 100px
     .section__title
         &, & *
@@ -1169,6 +1174,7 @@ h1, h2, h3, h4, h5
         transform: translateY(-50%)
 
 .addons
+    padding-top: 30px
     padding-bottom: 100px
     &__container
         margin: 70px auto 0px
@@ -1374,8 +1380,8 @@ h1, h2, h3, h4, h5
         background-color: #fff
         border-radius: 4px
         border: 1px solid #ccc
-        padding: 27px 35px
-        max-height: 175px
+        padding: 30px
+        max-height: 190px
         &-body
             display: flex
             flex-direction: column
@@ -1619,7 +1625,7 @@ h1, h2, h3, h4, h5
             width: 25px
             height: 25px
             text-align: center
-            line-height: 25px
+            line-height: 23px
             font-size: 24px
             vertical-align: middle
             border-radius: 50%
