--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -497,7 +497,7 @@ h1, h2, h3, h4, h5
         margin-top: 90px
         position: relative
     &__body
-        padding: 56px 76px 20px 56px
+        padding: 55px 55px 20px
         background-color: #fff
         border-radius: 4px
         position: relative
@@ -773,7 +773,7 @@ h1, h2, h3, h4, h5
             &:nth-child(2)
                 td
                     border-top: 12px solid #fff 
-                    padding-top: 43px
+                    padding-top: 45px
                     border-radius: 5px
             &:last-child
                 td
@@ -782,7 +782,7 @@ h1, h2, h3, h4, h5
             border-left: 12px solid #fff 
         td
             overflow: hidden
-            padding: 13px 40px
+            padding: 11px 40px
             &:nth-child(1)
                 font-size: 16px
                 line-height: 20px
@@ -1051,7 +1051,7 @@ h1, h2, h3, h4, h5
         margin-top: 30px
         color: #303030
     &__head
-        margin-bottom: 45px
+        margin-bottom: 40px
     &__footer
         display: flex
         justify-content: center
@@ -1067,7 +1067,7 @@ h1, h2, h3, h4, h5
         display: flex
         margin-right: 30px
         & + &
-            margin-top: 35px
+            margin-top: 13px
         &-img
             width: 130px
             height: 130px
@@ -1075,12 +1075,12 @@ h1, h2, h3, h4, h5
             overflow: hidden
             object-fit: cover
         &-body
-            width: 60%
+            width: 70%
             margin-left: 30px
         &-text
             font-size: 16px
             font-weight: 300
-            line-height: 24px
+            line-height: 26px
             & + &
                 margin-top: 1.5em
 
@@ -1099,7 +1099,7 @@ h1, h2, h3, h4, h5
             letter-spacing: normal
 
 .advantage
-    max-width: 510px
+    max-width: 520px
     margin-top: 95px
     &:nth-child(2n)
         margin-left: 90px
@@ -1423,6 +1423,7 @@ h1, h2, h3, h4, h5
         margin: 0 auto
         &, & *
             letter-spacing: normal
+            line-height: 43px
     &__subtitle
         display: block
         text-align: center
