--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -954,6 +954,8 @@ h1, h2, h3, h4, h5
         display: block
         margin-top: 50px
         margin-bottom: 50px
+        &, & *
+            letter-spacing: normal
     &__item
         background-color: #fff
         border-radius: 4px
