--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -21,8 +21,6 @@ $maxWidth: 1920
     transition: all .2s ease-in-out 0s
     color: $text_black
     font-family: 'Museo Sans', sans-serif
-    &:focus
-        outline: none
 
 body, html
     overflow-x: hidden
@@ -97,7 +95,7 @@ h1, h2, h3, h4, h5
         padding: 25px 40px
         border-radius: 40px
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
         margin-top: auto
         opacity: 0
         pointer-events: none
@@ -266,7 +264,7 @@ h1, h2, h3, h4, h5
         text-decoration: underline
         color: $text_yellow
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
     &__socials
         margin-right: 5px
         display: flex
@@ -327,7 +325,7 @@ h1, h2, h3, h4, h5
         font-size: 14px
         display: inline-block
         margin-left: 50px
-        font-weight: 300
+        font-weight: 400
 
 .main
     flex-grow: 1
@@ -646,7 +644,7 @@ h1, h2, h3, h4, h5
         font-weight: 700
     &__text
         font-size: 15px
-        font-weight: 300
+        font-weight: 400
         line-height: 22px
         margin-top: 20px
         max-width: 320px
@@ -736,6 +734,9 @@ h1, h2, h3, h4, h5
         font-size: 16px
         line-height: 22px
         border-radius: 50px
+        resize: none
+        &:focus
+            outline: none
         & + &
             margin-top: 10px
     &__agreement
@@ -944,7 +945,7 @@ h1, h2, h3, h4, h5
             line-height: 50px
     &__subtitle
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
         display: inline-block
         max-width: 640px
         margin-top: 80px
@@ -979,7 +980,7 @@ h1, h2, h3, h4, h5
                 background-image: url(../img/icons/close.svg)
                 vertical-align: middle
         &-text
-            font-weight: 300
+            font-weight: 400
             font-size: 16px
             color: #303030
             line-height: 26px
@@ -1024,7 +1025,7 @@ h1, h2, h3, h4, h5
             position: absolute
             right: 0
     &__subtitle
-        font-weight: 300
+        font-weight: 400
         font-size: 26px
         margin-top: 40px
         display: inline-block
@@ -1048,7 +1049,7 @@ h1, h2, h3, h4, h5
         margin-top: 25px
     &__text
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
         line-height: 26px
         margin-top: 30px
         color: #303030
@@ -1081,7 +1082,7 @@ h1, h2, h3, h4, h5
             margin-left: 30px
         &-text
             font-size: 16px
-            font-weight: 300
+            font-weight: 400
             line-height: 26px
             & + &
                 margin-top: 1.5em
@@ -1116,7 +1117,7 @@ h1, h2, h3, h4, h5
         display: block
         margin: 40px 0px 30px
     &__text
-        font-weight: 300
+        font-weight: 400
         font-size: 16px
         line-height: 30px
         color: #303030
@@ -1161,7 +1162,7 @@ h1, h2, h3, h4, h5
     &__text
         margin-top: 20px
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
         color: #303030
     &::before
         content: ''
@@ -1198,7 +1199,7 @@ h1, h2, h3, h4, h5
         display: inline-block
         font-size: 16px
         line-height: 26px
-        font-weight: 300
+        font-weight: 400
         margin-top: 20px
         color: #303030
 
@@ -1255,7 +1256,7 @@ h1, h2, h3, h4, h5
         color: #393939
     &__subtext
         color: #777777
-        font-weight: 300
+        font-weight: 400
         font-size: 12px
         margin-left: 15px
         display: inline-block
@@ -1320,7 +1321,7 @@ h1, h2, h3, h4, h5
         display: block
         text-align: center
         font-size: 18px
-        font-weight: 300
+        font-weight: 400
         line-height: 18px
     .section__title
         max-width: 520px
@@ -1412,7 +1413,7 @@ h1, h2, h3, h4, h5
         line-height: 18px
         position: relative
         display: inline-block
-        font-weight: 300
+        font-weight: 400
         &::before
             content: '•'
             display: inline-block
@@ -1430,7 +1431,7 @@ h1, h2, h3, h4, h5
         display: block
         text-align: center
         font-size: 26px
-        font-weight: 300
+        font-weight: 400
         margin: 60px auto 0px
     &__gifts
         margin-top: 50px
@@ -1510,7 +1511,7 @@ h1, h2, h3, h4, h5
     &__free
         display: inline-block
         position: relative
-        font-weight: 300
+        font-weight: 400
         line-height: 30px
         &::before
             content: ''
@@ -1531,7 +1532,7 @@ h1, h2, h3, h4, h5
         background-color: #f7f7f7
         padding: 25px 30px
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
         box-sizing: border-box
         max-width: 235px
         border-radius: 4px
@@ -1545,7 +1546,7 @@ h1, h2, h3, h4, h5
         text-align: center
     &__text
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
         color: #303030
         display: block
     &__options
@@ -1602,7 +1603,7 @@ h1, h2, h3, h4, h5
         max-width: 210px
         margin-left: 20px
         font-size: 16px
-        font-weight: 300
+        font-weight: 400
 
 .projects
     padding-top: 10px
@@ -1731,7 +1732,7 @@ h1, h2, h3, h4, h5
             background-size: contain
             background-repeat: no-repeat
     &__text
-        font-weight: 300
+        font-weight: 400
         font-size: 16px
         line-height: 28px
         & + &
@@ -1803,7 +1804,7 @@ h1, h2, h3, h4, h5
         display: inline-block
         margin-top: 15px
         font-size: 14px
-        font-weight: 300
+        font-weight: 400
 
 @for $i from 1 through 11
     .how__item:nth-child(#{$i})
@@ -1918,8 +1919,10 @@ h1, h2, h3, h4, h5
         text-align: center
         margin-top: 20px
         display: inline-block
+        max-width: 450px
     .count__input
         padding: 20px 15px
+        background-color: #f0f0f0
     .count__form
         max-width: 350px
         width: 100%
@@ -1953,7 +1956,7 @@ h1, h2, h3, h4, h5
         align-items: flex-start
     &__text
         font-size: 14px
-        font-weight: 300
+        font-weight: 400
         color: #393939
         line-height: 24px
     &__col
