--- a/dacha-project/sass/fonts.sass
+++ b/dacha-project/sass/fonts.sass
@@ -12,6 +12,12 @@
 
 @font-face
     font-family: "Museo Sans"
+    src: url("../fonts/MuseoSansCyrl-500.ttf") format('truetype')
+    font-style: normal
+    font-weight: 400
+
+@font-face
+    font-family: "Museo Sans"
     src: url("../fonts/MuseoSansCyrl-700.ttf") format('truetype')
     font-style: normal
     font-weight: 700
