--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5
         outline: none
     &:hover
         &::after
-            transform: skew(-15deg) translate(500px, -50%)
+            transform: skew(-15deg) translate(600px, -50%)
             transition-duration: .3s
     &_banner
         text-transform: uppercase
@@ -211,8 +211,16 @@ h1, h2, h3, h4, h5
             text-transform: uppercase
             font-weight: normal
             font-family: "Oswald"
-            sup
-                font-size: 20px !important
+            .sup
+                position: relative
+                display: inline-block
+                margin-right: 10px
+                &::after
+                    position: absolute
+                    font-family: "Oswald"
+                    content: '2'
+                    font-size: 30px
+                    top: -7px
     &__btn
         &-wrap
             width: 100%
@@ -335,11 +343,12 @@ h1, h2, h3, h4, h5
     height: 100vh
     width: 40vw
     background-color: #fff
+    overflow-y: auto
     z-index: 4
     right: 0
     top: 0
     transform: translateX(100%)
-    padding: 120px 20px 0px
+    padding: 105px 20px 20px
     &__item
         list-style-type: none
     &__link
@@ -349,6 +358,13 @@ h1, h2, h3, h4, h5
         font-weight: 600
     &.active
         transform: translateX(0%)
+    .header__tel-link
+        display: inline-block
+        margin-top: 15px
+        margin-left: 10px
+    .button
+        margin-top: 25px
+        margin-left: 10px
 
 .logo
     &__img
@@ -367,10 +383,33 @@ h1, h2, h3, h4, h5
     background-image: url(../img/banner_bg.jpg)
     background-size: cover
     background-position: center
+    .button_banner
+        position: relative
+        z-index: 2
+    &__tree
+        position: absolute
+        left: 0
+        bottom: 50px
+        max-width: 15vw
+    &__cloud
+        position: absolute
+        top: 0
+        left: 0
+        &-down
+            position: absolute
+            bottom: -70px
+    &__mobile-cloud
+        position: absolute
+        bottom: -180px
+        left: 50%
+        transform: translateX(-50%)
+        z-index: -1
     &__body
         padding-top: 180px
         padding-bottom: 430px
         max-width: 950px
+        position: relative
+        z-index: 3
     &__subtitle
         margin-top: 20px
         font-size: 22px
@@ -378,6 +417,7 @@ h1, h2, h3, h4, h5
         display: inline-block
     &__info
         margin: 70px 0px
+        position: relative
     &__img
         width: 42px
         height: auto
@@ -404,8 +444,9 @@ h1, h2, h3, h4, h5
             letter-spacing: normal
 
 .examples
+    padding-top: 50px
     &__container
-        margin: 90px 0px 70px
+        margin: 60px 0px 70px
         display: grid
         grid-template-columns: repeat(4, 1fr)
         grid-gap: 20px
@@ -415,7 +456,7 @@ h1, h2, h3, h4, h5
     display: flex
     flex-direction: column
     align-items: stretch
-    box-shadow: 0 0 20px 4px rgba(0, 0, 0, .03)
+    box-shadow: 0 0 20px 4px rgba(0, 0, 0, .05)
     border-radius: 5px
     position: relative
     &__img
@@ -716,8 +757,9 @@ h1, h2, h3, h4, h5
         display: flex
         flex-direction: column
         align-items: flex-end
-    &__title
-        @include adaptiv-font(32, 22)
+    &__title, &__title *
+        @include adaptiv-font(32, 26)
+        text-transform: uppercase
         font-family: "Oswald"
         text-align: right
         font-weight: normal
@@ -790,7 +832,7 @@ h1, h2, h3, h4, h5
     .section__title
         max-width: 830px
         &, & *
-        letter-spacing: normal
+            letter-spacing: normal
     &__niples
         position: absolute
         bottom: 0
@@ -801,6 +843,9 @@ h1, h2, h3, h4, h5
         right: -40px
     &__table
         margin-top: 90px
+        // min-width: 1200px
+        &-wrap
+            // overflow-x: auto
         &_hidden
             display: none
             &.active
@@ -838,7 +883,7 @@ h1, h2, h3, h4, h5
             min-width: 140px
             &:first-of-type
                 padding: 10px 0px 10px 45px
-                min-width: 600px
+                min-width: 550px
                 white-space: nowrap
                 color: #ffffff
                 font-size: 20px
@@ -1079,6 +1124,8 @@ h1, h2, h3, h4, h5
         flex-direction: column
         align-items: flex-start
         max-width: 540px
+        & + &
+            margin-left: 20px
     &__icon
         max-width: 65px
     &__title
@@ -1116,7 +1163,7 @@ h1, h2, h3, h4, h5
             height: 130px
             border-radius: 50%
             overflow: hidden
-            object-fit: cover
+            object-fit: contain
         &-body
             width: 70%
             margin-left: 30px
