--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -124,8 +124,6 @@
             max-width: 225px
         &__swiper
             max-width: 275px
-        .section__title 
-            text-align: left !important
         &__body
             padding-left: 0
 
@@ -583,6 +581,10 @@
                 &, & *
                     font-size: 24px
                     line-height: 30px
+
+    .reports
+        .section__title 
+            text-align: left !important 
 
     .logo
         margin-right: 10px
